--- a/product.html
+++ b/product.html
@@ -21,12 +21,14 @@
                 <i class='bx bx-x' id="close-cart"></i>
                 <h2 class="cart-title">YOUR CART</h2>
                 <div class="cart-content">
+                    
                 </div>
                 <div class="total">
                     <div class="total-title">Total</div>
                     <div class="total-price">$0</div>
                 </div>
-                <button type="button" class="btn-buy">Buy Now</button>
+                <a href="/new.html" type="button" class="btn-buy" >Buy Now </a>
+                   
             </div>
         </div>
         <script src="main.js"></script>
